--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "80:80"
+      - "8080:80"
     environment:
       - DOTNET_URLS=http://+:80
     networks:
@@ -16,9 +16,9 @@ services:
     build:
       context: ./client
     ports:
-      - "3000:80"
+      - "8081:80"
     environment:
-      - REACT_APP_API_BASE_URL=http://backend:80
+      - REACT_APP_API_BASE_URL=http://localhost:8080
     networks:
       - app-network
 
